# pidgin-mac

./: ChangeLog  README.txt  gfire-0.7.1.diff  gnutls-2.6.4.diff  meanwhile  pidgin-2.5.5.diff  pidgin-facebookchat-1.47.diff  pidgin-osx-bundle.diff  pidgin-otr-3.1.0.diff  pidgin-src  pidgin-src-orig  pidgin-twitter  show_diff.sh
frameworks/Cairo.framework/Versions/1/: Cairo
frameworks/GLib.framework/: GLib
frameworks/GLib.framework/Versions/2/: GLib
frameworks/Gtk.framework/: Gtk
gfire-0.7.1-orig/: Makefile.in  aclocal.m4  configure
gfire-0.7.1-orig/pixmaps/: Makefile.in
gfire-0.7.1-orig/src/: gf_debug.h  gf_games.c  gf_network.h  gf_packet.h  gfire.c
gfire-0.7.1/src/: Makefile.am  Makefile.in  gf_games.h  gf_network.c  gf_packet.c  gfire.h
gnutls-2.6.4/includes/gnutls/: gnutls.h
gnutls-2.6.4/lib/: auth_cert.c  byteswap.h  gnutls_int.h  mac-libgcrypt.c
meanwhile-1.0.2/: Makefile.in  aclocal.m4  configure  meanwhile.pc  meanwhile.spec
meanwhile-1.0.2/doc/: Makefile.in
meanwhile-1.0.2/samples/: Makefile.in  build
meanwhile-1.0.2/src/: Makefile.in
meanwhile-1.0.2/src/mpi/: Makefile.in
pidgin-2.5.5/libpurple/plugins/: simple.c
pidgin-2.5.5/pidgin/: gtkdnd-hints.c  gtkdocklet-gtk.c  gtkdocklet-x11.c  gtkmain.c  gtkutils.c
pidgin-2.5.8/libpurple/: plugin.h
pidgin-2.5.8/pidgin/: gtkblist.c  gtkdocklet.c  gtkdocklet.h  gtkmain.c
pidgin-2.5.8/pidgin/win32/: gtkdocklet-win32.c
pidgin-facebookchat-1.47/: Makefile  fb_info.c  libfacebook.c  libfacebook.h
pidgin-macosx/: Info.plist  config.c  config.h  createdmg.sh  fix_binary.sh  gtkrc  main.cp  pidgin-macosxTarget.xcconfig  pidgin.icns  post_build.sh
pidgin-macosx/libotr.framework/: libotr
pidgin-macosx/pidgin-macosx.xcodeproj/: az.mode1v3  az.pbxuser  project.pbxproj
pidgin-otr-3.1.0/: Makefile.in  gtk-dialog.c
pidgin-otr-3.1.0-orig/: aclocal.m4  configure
pidgin-twitter-0.8.4/: FAQ  FAQ_ja  Makefile.in  Makefile.mingw  README  autogen.sh  configure  configure.ac  icon.c  icon.h  main.c  main.h  pidgin-twitter.h  prefs.c  prefs.h  prefs.ui  purple_internal.h  twitter_api.c  twitter_api.h  util.c  util.h
(+72 files in other folders)
